style.css
* {
    font-family: Roboto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
}

.hero {
    background-color: #1f2937;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 100px;
}

.header .logo img {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    margin: 24px 0;   
}

.header .links {
    display: flex;
    gap: 8px;
    margin: 0;
}

.link {
    list-style: none;
}

.link a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.body {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 100px;
    margin-top: 75px; 
}

.body .right img {
    width: 500px;
    height: 300px;
}

.body .subtext {
    font-size: 18px;
    color: #e5e7eb;
    margin-top: 8px;
}

.body .sign-up {
    background-color: #3882F6;
    color: white;
    margin-top: 16px;
    border: 0;
    padding: 12px 16px;
    text-align: center;
    border-radius: 8px;
    font-size: 16px;
    font-weight: bold;
    font-family: sans-serif;
}

.body .left, .body .right img{
    width: 600px;
    margin-bottom: 100px;
}

.body .title {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 000;
}

.cat-pics .title {
    text-align: center;
    margin: 48px 0;
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
}

.pics img {
    width: 100%;
    height: 200px;
    border: #3882F6 solid;
    border-radius: 8px;
    flex-shrink: 0;
    margin-bottom: 8px;
}

.pics {
    display: flex;
    align-items: stretch;
    justify-content: center;
    gap: 24px;
    text-align: center;
}

.pic {
    width: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}

.pic p {
    color: rgb(91, 88, 88);
    margin-bottom: 48px;
    flex-grow: 1;
    font-size: 17px;
}

.quote-section{
    background-color: #e5e7eb;
    color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: center;
}

.quote-section .content {
    width: 50%;
    margin: 100px;
}

.quote-section p {
    font-size: 36px;
    font-style: italic;
}

.quote-section h3 {
    text-align: right;
    font-size: 24px;
}

.call-to-action {
    background-color: #3882F6;
    color: #F9FAF8;
    width: 900px;
    margin: 48px auto;
    border-radius: 8px;
    padding: 32px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.call-to-action h3 {
    font-size: 24px;
}

.call-to-action p {
    color: rgb(228, 226, 226);
    font-weight: 100;
    font-size: 17px;
}

.call-to-action .left {
    margin-left: 48px;
    font-family: sans-serif;
}

.call-to-action .right {
    margin-right: 48px;
    font-family: sans-serif;
}

.call-to-action button {
    background-color: #3882F6;
    color: white;
    border-radius: 8px;
    border: white solid;
    padding: 8px 32px;
    text-align: center;   
    font-weight: bold;
    font-size: 16px;
}

footer {
    text-align: center;
    background-color: #1f2937;
    color: #e5e7eb;
    padding: 48px;
}

